<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pokemeows.pokipoki.activities.LoginActivity">

    <LinearLayout
        android:padding="@dimen/form_padding"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_logo_height" />

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="@dimen/divider_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/login_email"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/login_password"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_marginTop="@dimen/divider_medium"
            style="@style/BasicButton"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:layout_marginTop="@dimen/divider_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/sign_up_text"
            android:padding="@dimen/divider_small"
            android:layout_marginTop="@dimen/divider_small"
            android:gravity="center"
            android:text="@string/no_account"
            android:textSize="@dimen/text_size_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
